Criação das telas: - Cadastro de Cliente - Listagem de Clientes - Classe de utilitários para facilitar o código - Cálculo de Prazo - Import da classe KSOAP2 para utilização do webservice dos correios

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url 'https://oss.sonatype.org/content/repositories/ksoap2-android-releases' }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.1'
