--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun May 07 21:18:28 BRT 2017
-sdk.dir=C\:\\Program Files (x86)\\Android\\android-sdk
+#Mon May 08 22:41:51 BRT 2017
+sdk.dir=/home/marcelo/Android/Sdk
