--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,15 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".ConfiguracoesActivity"/>
         <activity android:name=".CalculadoraActivity"/>
         <activity android:name=".ClientesActivity"/>
-        <activity android:name=".ListaClientesActivity"/>
+        <activity android:name=".ListarCliente"/>
         <activity android:name=".RastreioActivity"/>
+        <activity android:name=".EditarProdutoActivity"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
